--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <nav class="navbar">
       <div class="logo">Martin<span>Mutugi</span></div>
       <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#education">Education</a></li>
         <li><a href="#interests">Interests</a></li>
