--- a/index.html
+++ b/index.html
@@ -9,65 +9,305 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   <style>
+    :root {
+      --primary: #1a73e8;
+      --background: #fff;
+      --text: #222;
+      --card-bg: #f5f5f5;
+      --accent: #e8f0fe;
+    }
+    body.dark-mode {
+      --background: #181a1b;
+      --text: #f5f5f5;
+      --card-bg: #23272a;
+      --accent: #263238;
+    }
+    body {
+      font-family: 'Inter', Arial, sans-serif;
+      background: var(--background);
+      color: var(--text);
+      margin: 0;
+      transition: background 0.3s, color 0.3s;
+    }
     header {
-  position: sticky;
-  top: 0;
-  z-index: 1000; 
-  background-color: white; 
-}
-
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
-}
-html {
-  scroll-behavior: smooth;
-}
-
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background: var(--background);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.03);
+    }
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .logo {
+      font-weight: 900;
+      font-size: 1.5rem;
+      letter-spacing: 1px;
+    }
+    .logo span {
+      color: var(--primary);
+    }
+    .nav-links {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+      margin: 0;
+      padding: 0;
+    }
+    .nav-links a {
+      text-decoration: none;
+      color: var(--text);
+      font-weight: 700;
+      transition: color 0.2s;
+    }
+    .nav-links a:hover {
+      color: var(--primary);
+    }
+    #theme-toggle {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      z-index: 2000;
+      background: var(--accent);
+      border: none;
+      border-radius: 50%;
+      padding: 0.7rem 0.9rem;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    #theme-toggle:hover {
+      background: var(--primary);
+      color: #fff;
+    }
+    .hero {
+      text-align: center;
+      padding: 3rem 1rem 2rem 1rem;
+      background: var(--accent);
+    }
+    .profile-img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 1rem;
+      border: 4px solid var(--primary);
+    }
+    .highlighted-name {
+      color: var(--primary);
+      font-weight: 900;
+    }
+    .tagline {
+      font-size: 1.2rem;
+      margin: 0.5rem 0 1.5rem 0;
+      color: var(--text);
+    }
+    .hero-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1rem;
+    }
+    .btn, .btn-outline {
+      padding: 0.7rem 1.5rem;
+      border-radius: 25px;
+      font-weight: 700;
+      border: 2px solid var(--primary);
+      text-decoration: none;
+      font-size: 1rem;
+      transition: background 0.2s, color 0.2s;
+    }
+    .btn {
+      background: var(--primary);
+      color: #fff;
+    }
+    .btn:hover {
+      background: #155ab6;
+    }
+    .btn-outline {
+      background: transparent;
+      color: var(--primary);
+    }
+    .btn-outline:hover {
+      background: var(--primary);
+      color: #fff;
+    }
+    .card-section {
+      max-width: 900px;
+      margin: 2rem auto;
+      background: var(--card-bg);
+      border-radius: 16px;
+      padding: 2rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    }
+    .card-section h2 {
+      margin-top: 0;
+      color: var(--primary);
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+    }
+    .card {
+      background: var(--background);
+      border-radius: 12px;
+      padding: 1.2rem;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.06);
+      transition: box-shadow 0.2s;
+    }
+    .card:hover {
+      box-shadow: 0 4px 16px rgba(0,0,0,0.10);
+    }
+    .cv-button {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.6rem 1.2rem;
+      background: var(--primary);
+      color: #fff;
+      border-radius: 20px;
+      text-decoration: none;
+      font-weight: 700;
+      transition: background 0.2s;
+    }
+    .cv-button:hover {
+      background: #155ab6;
+    }
+    .contact form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      max-width: 500px;
+      margin: 0 auto 1.5rem auto;
+    }
+    .contact input, .contact textarea {
+      padding: 0.8rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      background: var(--background);
+      color: var(--text);
+      transition: border 0.2s;
+    }
+    .contact input:focus, .contact textarea:focus {
+      border: 1.5px solid var(--primary);
+      outline: none;
+    }
+    .contact button[type="submit"] {
+      background: var(--primary);
+      color: #fff;
+      border: none;
+      border-radius: 20px;
+      padding: 0.7rem 1.5rem;
+      font-weight: 700;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .contact button[type="submit"]:hover {
+      background: #155ab6;
+    }
+    .social-icons {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 1rem;
+    }
+    .social-icons a {
+      color: var(--primary);
+      font-weight: 700;
+      text-decoration: none;
+      font-size: 1.1rem;
+      transition: color 0.2s;
+    }
+    .social-icons a:hover {
+      color: #155ab6;
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 1.5rem 0 1rem 0;
+      font-size: 1rem;
+      color: #888;
+      background: var(--card-bg);
+      border-radius: 0 0 16px 16px;
+      margin-bottom: 0;
+    }
+    @media (max-width: 600px) {
+      .navbar {
+        flex-direction: column;
+        gap: 1rem;
+      }
+      .hero {
+        padding: 2rem 0.5rem;
+      }
+      .card-section {
+        padding: 1rem;
+      }
+    }
+    html {
+      scroll-behavior: smooth;
+    }
   </style>
 </head>
 <body class="dark-mode">
 
-  <button id="theme-toggle">🌙 Toggle Theme</button>
+  <button id="theme-toggle" aria-label="Toggle dark/light mode">🌙</button>
 
   <header>
-  <nav class="navbar">
-    <div class="logo">My <span>Journey</span></div>
-    <ul class="nav-links">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#interests">Interests</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+    <nav class="navbar" aria-label="Main navigation">
+      <div class="logo">My <span>Journey</span></div>
+      <ul class="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#languages">Languages</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#interests">Interests</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
- 
-</header>
-<!-- Hero/Home Section -->
-<section class="hero" id="home" data-aos="fade-up">
-  <img src="assets/profile.jpg" alt="Martin Mutugi" class="profile-img" />
-
-  <h1>Hello, I'm <span class="highlighted-name">Martin Mutugi</span></h1>
-
-  <p class="tagline">Empowering Africa through code and creativity</p>
-
-  <div class="hero-buttons">
-    <a href="#projects" class="btn">View My Projects</a>
-    <a href="#contact" class="btn-outline">Hire Me</a>
-  </div>
-</section>
-
-
-  <section id="about" class="card-section" data-aos="fade-up">
-    <h2>About Me</h2>
-    <p>I’m Martin Mutugi, a software developer and digital advocate based in Nairobi. I craft intuitive web experiences, scale backend systems, and empower others with tech skills. My transformation from trainee to mentor fuels my global mission.</p>
-    <img src="assets/profile.jpg" alt="martin mutugi" class="profile-img" width="50" height="50" />
+  <!-- Hero/Home Section -->
+  <section class="hero" id="home" data-aos="fade-up">
+    <img src="assets/profile.jpg" alt="Martin Mutugi" class="profile-img" />
+    <h1>Hello, I'm <span class="highlighted-name">Martin Mutugi</span></h1>
+    <p class="tagline">Empowering Africa through code and creativity</p>
+    <div class="hero-buttons">
+      <a href="#projects" class="btn">View My Projects</a>
+      <a href="#contact" class="btn-outline">Hire Me</a>
+    </div>
   </section>
 
+  <!-- About Section -->
+  <section id="about" class="card-section" data-aos="fade-up">
+    <h2>About Me</h2>
+    <p>
+      I’m Martin Mutugi, a software developer and digital advocate based in Nairobi. I craft intuitive web experiences, scale backend systems, and empower others with tech skills. My transformation from trainee to mentor fuels my global mission.
+    </p>
+    <img src="assets/profile.jpg" alt="Martin Mutugi" class="profile-img" width="50" height="50" />
+  </section>
+
+  <!-- Programming Languages Section -->
+  <section id="languages" class="card-section" data-aos="fade-up">
+    <h2>Programming Languages</h2>
+    <ul>
+      <li>Python</li>
+      <li>JavaScript</li>
+      <li>HTML & CSS</li>
+      <li>Java</li>
+      <li>SQL</li>
+      <li>PHP</li>
+    </ul>
+  </section>
+
+  <!-- Education Section -->
   <section id="education" class="card-section" data-aos="fade-up">
     <h2>Education & Certifications</h2>
     <ul>
@@ -76,44 +316,57 @@ html {
       <li>Python for Data Science and Machine Learning</li>
       <li>Full-Stack Web Development Certification</li>
     </ul>
-    <a class="cv-button" href="assets/MartinMutugi_CV.pdf" target="_blank">📄 Download My CV</a>
+    <a class="cv-button" href="assets/MartinMutugi_CV.pdf" target="_blank" download>📄 Download My CV</a>
   </section>
 
+  <!-- Interests Section -->
   <section id="interests" class="card-section" data-aos="fade-up">
     <h2>Interests</h2>
     <div class="grid">
-      <p><strong>Tech Empowerment:</strong> Advocating for youth digital literacy across Africa.</p>
-      <p><strong>Creative Coding:</strong> Transforming ideas into scalable, impactful apps.</p>
-      <p><strong>Digital Entrepreneurship:</strong> Growing resilient online platforms and communities.</p>
+      <div>
+        <p><strong>Tech Empowerment:</strong> Advocating for youth digital literacy across Africa.</p>
+      </div>
+      <div>
+        <p><strong>Creative Coding:</strong> Transforming ideas into scalable, impactful apps.</p>
+      </div>
+      <div>
+        <p><strong>Digital Entrepreneurship:</strong> Growing resilient online platforms and communities.</p>
+      </div>
     </div>
   </section>
 
+  <!-- Projects Section -->
   <section id="projects" class="card-section" data-aos="fade-up">
     <h2>Projects</h2>
     <div id="project-container" class="grid"></div>
   </section>
 
+  <!-- Contact Section -->
   <section id="contact" class="card-section contact" data-aos="fade-up">
-  <h2>Let’s Connect</h2>
-  <form action="https://formsubmit.co/mutugimartin967@gmail.com" method="POST">
-    <!-- Prevent bot spam -->
-    <input type="hidden" name="_captcha" value="false">
-    <!-- Redirect after submit (optional) -->
-    <input type="hidden" name="_next" value="https://your-portfolio-site.com/thank-you.html">
+    <h2>Let’s Connect</h2>
+    <form action="https://formsubmit.co/mutugimartin967@gmail.com" method="POST" autocomplete="on">
+      <!-- Prevent bot spam -->
+      <input type="hidden" name="_captcha" value="false">
+      <!-- Redirect after submit (optional) -->
+      <input type="hidden" name="_next" value="https://your-portfolio-site.com/thank-you.html">
 
-    <input type="text" name="name" placeholder="Your Name" required />
-    <input type="email" name="email" placeholder="Your Email" required />
-    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-    
-    <button type="submit">Send Message</button>
-  </form>
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" placeholder="Your Name" required />
 
-  <div class="social-icons">
-    <a href="https://github.com/Martin-Mutugi" target="_blank">GitHub</a>
-    <a href="https://www.linkedin.com/in/martin-mutugi-a210b1373/" target="_blank">LinkedIn</a>
-  </div>
-</section>
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Your Email" required />
 
+      <label for="message">Message</label>
+      <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+
+    <div class="social-icons">
+      <a href="https://github.com/Martin-Mutugi" target="_blank" rel="noopener">GitHub</a>
+      <a href="https://www.linkedin.com/in/martin-mutugi-a210b1373/" target="_blank" rel="noopener">LinkedIn</a>
+    </div>
+  </section>
 
   <footer class="card-section">
     <p>© 2025 Martin Mutugi — Built with 💡 for global excellence</p>
@@ -121,14 +374,18 @@ html {
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
+    // Initialize AOS
     AOS.init({ duration: 1200, once: true });
 
+    // Theme toggle
     const toggleBtn = document.getElementById('theme-toggle');
     toggleBtn.addEventListener('click', () => {
       document.body.classList.toggle('light-mode');
       document.body.classList.toggle('dark-mode');
+      toggleBtn.textContent = document.body.classList.contains('dark-mode') ? '🌙' : '☀️';
     });
 
+    // Projects data
     const projects = [
       {
         title: "Smart Survey Optimizer",
@@ -147,6 +404,7 @@ html {
       }
     ];
 
+    // Render projects
     const container = document.getElementById("project-container");
     projects.forEach(project => {
       const card = document.createElement("div");
@@ -154,7 +412,7 @@ html {
       card.innerHTML = `
         <h3>${project.title}</h3>
         <p>${project.description}</p>
-        <a href="${project.link}" target="_blank">View Project</a>
+        <a href="${project.link}" target="_blank" rel="noopener">View Project</a>
       `;
       container.appendChild(card);
     });
