I have added icons for navigation bars

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <button class="mobile-menu-btn" aria-label="Toggle menu">☰</button>
 <meta name="description" content="Martin Mutugi's portfolio: Software Developer specializing in Python, JavaScript, and cloud solutions." />
 <meta property="og:title" content="Martin Mutugi | Digital Portfolio" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
       --primary: #1a73e8;
@@ -291,17 +292,52 @@
 
   <header>
     <nav class="navbar" aria-label="Main navigation">
-      <div class="logo">My <span>Journey</span></div>
-      <ul class="nav-links">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#languages">Languages</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#interests">Interests</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+  <div class="logo">My <span>Journey</span></div>
+  <ul class="nav-links">
+    <li>
+      <a href="#home">
+        <i class="fas fa-home nav-icon"></i>
+        Home
+      </a>
+    </li>
+    <li>
+      <a href="#about">
+        <i class="fas fa-user nav-icon"></i>
+        About
+      </a>
+    </li>
+    <li>
+      <a href="#languages">
+        <i class="fas fa-code nav-icon"></i>
+        Skills
+      </a>
+    </li>
+    <li>
+      <a href="#education">
+        <i class="fas fa-graduation-cap nav-icon"></i>
+        Education
+      </a>
+    </li>
+    <li>
+      <a href="#interests">
+        <i class="fas fa-heart nav-icon"></i>
+        Interests
+      </a>
+    </li>
+    <li>
+      <a href="#projects">
+        <i class="fas fa-project-diagram nav-icon"></i>
+        Projects
+      </a>
+    </li>
+    <li>
+      <a href="#contact">
+        <i class="fas fa-envelope nav-icon"></i>
+        Contact
+      </a>
+    </li>
+  </ul>
+</nav>
   </header>
 
   <!-- Hero/Home Section -->
