I have added icon besides my journe

--- a/index.html
+++ b/index.html
@@ -292,7 +292,10 @@
 
   <header>
     <nav class="navbar" aria-label="Main navigation">
-  <div class="logo">My <span>Journey</span></div>
+ <div class="logo">
+  <i class="fas fa-route" style="color: var(--primary); margin-right: 8px;"></i>
+  My <span>Journey</span>
+</div>
   <ul class="nav-links">
     <li>
       <a href="#home">
