--- a/index.html
+++ b/index.html
@@ -489,46 +489,69 @@
 const projects = [
   {
     title: "Real-Time Chat App",
-    description: "Secure messaging platform built with Node.js and Socket.io supporting 10,000+ concurrent users. Features end-to-end encryption and message history.",
+    description: "Secure messaging platform built with Node.js and Socket.io supporting 10,000+ concurrent users.",
+    screenshot: "assets/chat-app.jpg",
+    metrics: [
+      "⚡ 30% lower latency with WebSocket optimizations",
+      "🔒 End-to-end encryption",
+      "🚀 Handles 10k+ users simultaneously"
+    ],
     link: "https://github.com/Martin-Mutugi/Real-Time-Chat-App",
-    technologies: ["Node.js", "Socket.io", "MongoDB", "Redis"],
-    metrics: "Reduced latency by 30% through WebSocket optimization"
+    technologies: ["Node.js", "Socket.io", "MongoDB", "Redis"]
   },
   {
     title: "E-Commerce Platform Redesign",
-    description: "Modernized legacy platform with React.js and Stripe integration, resulting in 40% higher conversion rates and 25% faster checkout.",
-    link: "https://github.com/Martin-Mutugi/E-Commerce-Platform-Redesign", 
-    technologies: ["React.js", "Stripe API", "Node.js"],
-    metrics: "Improved Lighthouse score from 45 to 92"
+    description: "Modernized legacy platform with React.js and Stripe integration.",
+    screenshot: "assets/ecommerce.jpg",
+    metrics: [
+      "💰 40% higher conversion rates",
+      "⚡ 25% faster checkout flow",
+      "📈 Lighthouse score: 92 (up from 45)"
+    ],
+    link: "https://github.com/Martin-Mutugi/E-Commerce-Platform-Redesign",
+    technologies: ["React.js", "Stripe API", "Node.js"]
   },
   {
     title: "Employee Management System",
-    description: "Full-stack HR solution reducing administrative tasks by 35% through automated reporting and permission controls.",
-    link: "https://github.com/Martin-Mutugi/Employee-Management-System", 
-    technologies: ["React.js", "PostgreSQL", "Django"],
-    metrics: "Cut payroll processing time by 60%"
+    description: "Full-stack HR solution reducing administrative overhead by 35%.",
+    screenshot: "assets/employee-system.jpg",
+    metrics: [
+      "⏱️ 60% faster payroll processing",
+      "📊 Automated reporting dashboard",
+      "🔑 Role-based access control"
+    ],
+    link: "https://github.com/Martin-Mutugi/Employee-Management-System",
+    technologies: ["React.js", "PostgreSQL", "Django"]
   }
 ];
 
 // Enhanced render function
 
-   const container = document.getElementById("project-container");
+ const container = document.getElementById("project-container");
+
 projects.forEach(project => {
   const card = document.createElement("div");
   card.classList.add("card");
   card.innerHTML = `
-    <h3>${project.title}</h3>
-    <p>${project.description}</p>
-    <div class="tech-tags">
-      ${project.technologies.map(tech => `<span class="tag">${tech}</span>`).join('')}
+    <div class="project-image">
+      <img src="${project.screenshot}" alt="${project.title}" loading="lazy">
     </div>
-    <p class="metrics">${project.metrics}</p>
-    <a href="${project.link}" target="_blank" rel="noopener noreferrer" class="project-link">
-      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-        <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3 3 0 0 0-.9-2.3c3.1-.3 6.4-1.5 6.4-7A5.4 5.4 0 0 0 20 4.8 5 5 0 0 0 20 1s-1.3-.3-4 1.5a13 13 0 0 0-7 0C6.3.7 5 1 5 1a5 5 0 0 0 0 3.8 5.4 5.4 0 0 0-1.5 3.7c0 5.5 3.3 6.7 6.4 7a3 3 0 0 0-.9 2.3V21"></path>
-      </svg>
-      View on GitHub
-    </a>
+    <div class="project-content">
+      <h3>${project.title}</h3>
+      <p>${project.description}</p>
+      <div class="metrics">
+        ${project.metrics.map(metric => `<div class="metric">${metric}</div>`).join('')}
+      </div>
+      <div class="tech-tags">
+        ${project.technologies.map(tech => `<span class="tag">${tech}</span>`).join('')}
+      </div>
+      <a href="${project.link}" target="_blank" class="project-link">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3 3 0 0 0-.9-2.3c3.1-.3 6.4-1.5 6.4-7A5.4 5.4 0 0 0 20 4.8 5 5 0 0 0 20 1s-1.3-.3-4 1.5a13 13 0 0 0-7 0C6.3.7 5 1 5 1a5 5 0 0 0 0 3.8 5.4 5.4 0 0 0-1.5 3.7c0 5.5 3.3 6.7 6.4 7a3 3 0 0 0-.9 2.3V21"></path>
+        </svg>
+        View on GitHub
+      </a>
+    </div>
   `;
   container.appendChild(card);
 });
