--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ const projects = [
   {
     title: "Real-Time Chat App",
     description: "Secure messaging platform built with Node.js and Socket.io supporting 10,000+ concurrent users.",
-    screenshot: "assets/chat-app.jpg, ",
+    screenshot: "assets/chat-app.jpg",
     metrics: [
       "⚡ 30% lower latency with WebSocket optimizations",
       "🔒 End-to-end encryption",
