I have updated my potifolio

--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
     }
   </style>
 </head>
+<!--Main content starts here-->
 <body class="dark-mode">
 
   <button id="theme-toggle" aria-label="Toggle dark/light mode">🌙</button>
