I have updated my cv

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
       <li>Python for Data Science and Machine Learning</li>
       <li>Full-Stack Web Development Certification</li>
     </ul>
-    <a class="cv-button" href="assets/MartinMutugi_CV.pdf" target="_blank" download>📄 Download My CV</a>
+    <a class="cv-button" href="assets/MartinMutugi_CV.pdf" target="_blank" download> Download My CV</a>
   </section>
 
   <!-- Interests Section -->
@@ -486,7 +486,7 @@
 </section>
 
   <footer class="card-section">
-    <p>© 2025 Martin Mutugi — Built with 💡 for global excellence</p>
+    <p>© 2025 Martin Mutugi — Built by Me  for global excellence</p>
   </footer>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -509,9 +509,9 @@ const projects = [
     description: "Secure messaging platform built with Node.js and Socket.io supporting 10,000+ concurrent users.",
     screenshot: "assets/chat-app.jpg",
     metrics: [
-      "⚡ 30% lower latency with WebSocket optimizations",
-      "🔒 End-to-end encryption",
-      "🚀 Handles 10k+ users simultaneously"
+      " 30% lower latency with WebSocket optimizations",
+      " End-to-end encryption",
+      " Handles 10k+ users simultaneously"
     ],
     link: "https://github.com/Martin-Mutugi/Real-Time-Chat-App",
     technologies: ["Node.js", "Socket.io", "MongoDB", "Redis"]
@@ -521,9 +521,9 @@ const projects = [
     description: "Modernized legacy platform with React.js and Stripe integration.",
     screenshot: "assets/ecommerce.jpg",
     metrics: [
-      "💰 40% higher conversion rates",
-      "⚡ 25% faster checkout flow",
-      "📈 Lighthouse score: 92 (up from 45)"
+      " 40% higher conversion rates",
+      " 25% faster checkout flow",
+      " Lighthouse score: 92 (up from 45)"
     ],
     link: "https://github.com/Martin-Mutugi/E-Commerce-Platform-Redesign",
     technologies: ["React.js", "Stripe API", "Node.js"]
@@ -533,9 +533,9 @@ const projects = [
     description: "Full-stack HR solution reducing administrative overhead by 35%.",
     screenshot: "assets/employee-system.jpg",
     metrics: [
-      "⏱️ 60% faster payroll processing",
-      "📊 Automated reporting dashboard",
-      "🔑 Role-based access control"
+      " 60% faster payroll processing",
+      " Automated reporting dashboard",
+      " Role-based access control"
     ],
     link: "https://github.com/Martin-Mutugi/Employee-Management-System",
     technologies: ["React.js", "PostgreSQL", "Django"]
