I have updated my portfolio

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
       <li>Python for Data Science and Machine Learning</li>
       <li>Full-Stack Web Development Certification</li>
     </ul>
-    <a class="cv-button" href="assets/MartinMutugi_CV.pdf" target="_blank" download> Download My CV</a>
+    <a class="cv-button" href="assets/Martin_Mutugi_CV.pdf" target="_blank" download> Download My CV</a>
   </section>
 
   <!-- Interests Section -->
@@ -505,39 +505,39 @@
    // Updated Projects Data
 const projects = [
   {
-    title: "Real-Time Chat App",
+    title: "AgriSmart SDG Platform",
     description: "Secure messaging platform built with Node.js and Socket.io supporting 10,000+ concurrent users.",
-    screenshot: "assets/chat-app.jpg",
+    screenshot: "assets/AgriSmart-SDG-Platform.jpg",
     metrics: [
       " 30% lower latency with WebSocket optimizations",
       " End-to-end encryption",
       " Handles 10k+ users simultaneously"
     ],
-    link: "https://github.com/Martin-Mutugi/Real-Time-Chat-App",
+    link: "https://finale-plp-project-chi.vercel.app/",
     technologies: ["Node.js", "Socket.io", "MongoDB", "Redis"]
   },
   {
-    title: "E-Commerce Platform Redesign",
+    title: "Mindful Minutes Platform",
     description: "Modernized legacy platform with React.js and Stripe integration.",
-    screenshot: "assets/ecommerce.jpg",
+    screenshot: "assets/Mindful-Minutes.jpg",
     metrics: [
       " 40% higher conversion rates",
       " 25% faster checkout flow",
       " Lighthouse score: 92 (up from 45)"
     ],
-    link: "https://github.com/Martin-Mutugi/E-Commerce-Platform-Redesign",
+    link: "https://mindfulminutes.onrender.com/",
     technologies: ["React.js", "Stripe API", "Node.js"]
   },
   {
-    title: "Employee Management System",
+    title: "SDG Donations Platform",
     description: "Full-stack HR solution reducing administrative overhead by 35%.",
-    screenshot: "assets/employee-system.jpg",
+    screenshot: "assets/SDG-Donations-Platform.jpg",
     metrics: [
       " 60% faster payroll processing",
       " Automated reporting dashboard",
       " Role-based access control"
     ],
-    link: "https://github.com/Martin-Mutugi/Employee-Management-System",
+    link: "https://angie-plp-final-project.vercel.app/",
     technologies: ["React.js", "PostgreSQL", "Django"]
   }
 ];
