--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ projects.forEach(project => {
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor">
           <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.9a3 3 0 0 0-.9-2.3c3.1-.3 6.4-1.5 6.4-7A5.4 5.4 0 0 0 20 4.8 5 5 0 0 0 20 1s-1.3-.3-4 1.5a13 13 0 0 0-7 0C6.3.7 5 1 5 1a5 5 0 0 0 0 3.8 5.4 5.4 0 0 0-1.5 3.7c0 5.5 3.3 6.7 6.4 7a3 3 0 0 0-.9 2.3V21"></path>
         </svg>
-        View on GitHub
+        View The Platform
       </a>
     </div>
   `;
